# Oopzbot-SDK

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  test.env.example
.github/workflows/: ci.yml  docs.yml  enforce-main-source.yml
docs/: index.md
docs/adapters/: index.md  onebot-v12.md
docs/adapters/onebot/: actions.md  implementation-notes.md  index.md  message-id.md  quickstart.md  server.md  v11.md  v12.md
docs/adapters/platform/: OlivOS.md  astrbot.md  hoshinobot.md
docs/development/: contributing.md  docs-site.md
docs/guide/: bot-lifecycle.md  concepts.md  configuration.md  events.md  installation.md  messaging.md  quickstart.md
docs/recipes/: index.md  list-areas-and-channels.md  password-login.md  private-message.md  recall-message.md  reply-ping.md  send-image.md
docs/reference/: area-service.md  auth.md  channel-service.md  events.md  media-service.md  member-service.md  message-service.md  models.md  moderation-service.md  person-service.md  services.md  voice-service.md
examples/: reply_bot.py  send_message.py  upload_private_image.py  voice_join_and_play.py
oopz/: __init__.py  api.py  client.py  config.py  exceptions.py  models.py  response.py  sender.py  signer.py  upload.py
oopz_sdk/: README.md  __init__.py  api.py  logger.py  response.py  test-client.py
oopz_sdk/adapters/: __init__.py
oopz_sdk/adapters/onebot/: __init__.py  install.py  server.py  utils.py  v11.py  v12.py
oopz_sdk/adapters/onebot/v11/: __init__.py  adapter.py  event.py  message.py  server.py  types.py
oopz_sdk/adapters/onebot/v12/: __init__.py  adapter.py  event.py  message.py  server.py  types.py
oopz_sdk/assets/voice/: agora_player.html
oopz_sdk/auth/: __init__.py  _builtin_login_bundle.py  api_password_login.py  headers.py  ids.py  manager.py  password_login.py  signer.py
oopz_sdk/cli/: __init__.py  password_login.py
oopz_sdk/client/: __init__.py  bot.py  compat.py  rest.py  sender.py  ws.py
oopz_sdk/compat/: __init__.py  sender.py
oopz_sdk/config/: __init__.py  constants.py  settings.py
oopz_sdk/events/: __init__.py  context.py  dispatcher.py  parser.py  registry.py
oopz_sdk/exceptions/: __init__.py  api.py  auth.py  base.py  parse.py  transport.py
oopz_sdk/models/: __init__.py  area.py  attachment.py  base.py  channel.py  compat.py  event.py  member.py  message.py  moderation.py  person.py  response.py  segment.py
oopz_sdk/services/: __init__.py  area.py  channel.py  media.py  member.py  message.py  moderation.py  person.py  privatemessage.py  voice.py
oopz_sdk/state/: cache.py  store.py
oopz_sdk/testing/: __init__.py  factories.py  fixtures.py
oopz_sdk/transport/: __init__.py  base.py  http.py  proxy.py  voice_browser.py  ws.py
oopz_sdk/utils/: __init__.py  image.py  jwt.py  message_builder.py  payload.py  reaction_emoji.py  text.py  time.py
script/: credential_tool.py  password_login.py
smoke/: smoke.py  smoke_test.py
tests/: _oopz_sdk_test_support.py  test_area_service.py  test_auth_integration.py  test_auth_manager.py  test_event_parser.py  test_examples.py  test_http_request_data.py  test_login_expiry.py  test_message_model.py  test_oopz_sdk_area.py  test_oopz_sdk_channel.py  test_oopz_sdk_core.py  test_oopz_sdk_events_runtime.py  test_oopz_sdk_member.py  test_oopz_sdk_message.py  test_oopz_sdk_moderation.py  test_oopz_sdk_services.py  test_operation_result.py  test_package_data.py  test_packaging.py  test_password_login.py  test_public_api.py  test_rest_client_init.py  test_services_missing_area.py
