[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oopz-sdk"
version = "0.4.0"
description = "Oopz 平台 Python SDK，提供 HTTP API、文件上传与 WebSocket 事件能力。"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Oopzbot Contributors" },
]
keywords = ["oopz", "sdk", "bot", "websocket"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography>=42,<48",
  "pillow>=10,<13",
  "requests>=2.32,<3",
  "websocket-client>=1.8,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "twine>=5,<6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["oopz*"]

[tool.setuptools.package-data]
oopz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
